--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "devDependencies": {
     "cors": "^2.8.5",
     "eslint": "^8.41.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "name": "pizza-order-prototype-javascript-sebestyenbenedek",
   "description": "No starter code is provided. Start from scratch!",
