--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "run-parallel": "^1.2.0",
     "shebang-command": "^2.0.0",
     "shebang-regex": "^3.0.0",
+    "start": "^5.1.0",
     "strip-ansi": "^6.0.1",
     "strip-json-comments": "^3.1.1",
     "supports-color": "^7.2.0",
